--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/server": "^4.11.0",
     "graphql": "^16.9.0",
+    "graphql-tag": "^2.12.6",
     "tsx": "^4.19.0"
   },
   "devDependencies": {
